--- a/index.html
+++ b/index.html
@@ -20,87 +20,96 @@
         </nav>
     </header>
     <main
-        <section id="introducao
+        <section id="introducao"accesskey="">
             <h2>Introdução</h2>
-            <p> Primeira Guerra Mundial começou com o assassinato do arquiduque Francisco Ferdinando, herdeiro do trono austro-húngaro, em Sarajevo, no dia 28 de junho de 1914. Esse evento, embora não tenha sido a única causa, serviu como estopim para um conflito que já estava sendo gestado por tensões políticas, econômicas e nacionalistas na Europa.
-O assassinato e as consequências imediatas:
-O arquiduque Francisco Ferdinando e sua esposa foram assassinados por um nacionalista sérvio chamado Gavrilo Princip.
-A Áustria-Hungria, com o apoio da Alemanha, culpou a Sérvia e apresentou um ultimato com exigências consideradas inaceitáveis.
-A Sérvia, com o apoio da Rússia, não aceitou todas as exigências, o que levou a Áustria-Hungria a declarar guerra à Sérvia em 28 de julho de 1914.
-A escalada do conflito:
-A Rússia, aliada da Sérvia, iniciou a mobilização de suas tropas, levando a Alemanha a declarar guerra à Rússia e, em seguida, à França.
-A Alemanha invadiu a Bélgica para atacar a França, o que fez com que a Grã-Bretanha entrasse na guerra contra a Alemanha.  da história moderna.as dos cem anos anteriores.</p>
+            A Primeira Guerra Mundial, também conhecida como Grande Guerra, foi um marco histórico que transformou o século 20. Aconteceu entre 1914 e 1918 e envolveu um grande número de países de todo o mundo, mas o epicentro do conflito foi na Europa. Para entender o que levou a essa guerra tão destrutiva, é preciso olhar para o cenário político, econômico e social da época.
+
+  Na virada do século, a Europa estava dividida em duas grandes alianças: a Tríplice Entente, composta por França, Reino Unido e Rússia, e a Tríplice Aliança, formada por Alemanha, Áustria-Hungria e Itália. Essa divisão estava enraizada em décadas de rivalidade e disputas territoriais, especialmente com relação ao controle de áreas da África e do Oriente Médio, além das tensões em torno do equilíbrio de poder na Europa. Além disso, havia uma corrida armamentista intensa, com cada nação buscando aumentar seu poder militar, o que só aumentava a desconfiança mútua.
+
+  O estopim da guerra foi o assassinato do arquiduque Francisco Ferdinando, herdeiro do trono da Áustria-Hungria, em Sarajevo, em 28 de junho de 1914, por um nacionalista sérvio. Esse evento aparentemente isolado desencadeou uma série de reações em cadeia. A Áustria-Hungria, com o apoio da Alemanha, declarou guerra à Sérvia. Em resposta, a Rússia, que tinha uma aliança com a Sérvia, mobilizou suas forças. A partir daí, outros países foram sendo arrastados para o conflito, muitas vezes por causa de obrigações de alianças ou por rivalidades regionais e globais.
+
+  O conflito rapidamente se espalhou por várias frentes: além da Europa, houve batalhas no Oriente Médio, na África, e até no Pacífico. O combate não se restringiu apenas ao campo de batalha, mas também envolveu a economia e a indústria, com os países em guerra mobilizando suas populações e recursos de maneiras sem precedentes. A guerra total exigia que todos os aspectos da vida nacional fossem subordinados ao esforço de guerra.
+
+  As trincheiras, especialmente na Frente Ocidental, tornaram-se um símbolo do conflito. Os soldados enfrentavam condições extremas: lama, frio, doenças e a constante ameaça de morte. O combate estava longe de ser uma batalha heroica e tradicional; muitas vezes, as batalhas eram prolongadas, sangrentas e pouco decisivas, levando a milhões de mortos e feridos. Nesse cenário, as inovações tecnológicas como metralhadoras, aviões de combate, tanques e armas químicas, como o gás mostarda, mudaram a natureza da guerra, tornando-a ainda mais letal.
+
+  No lado político, a guerra teve profundas consequências. A queda de impérios foi uma das mais significativas: o Império Austro-Húngaro, o Império Otomano, o Império Russo e o Império Alemão foram desfeitos ou sofreram transformações radicais. Isso resultou na criação de novos países na Europa e no Oriente Médio, como a Tchecoslováquia, a Iugoslávia, a Turquia moderna, e mudanças nas fronteiras de várias nações.
+
+  O Tratado de Versalhes, assinado em 1919, pôs fim formalmente ao conflito, impondo severas penalidades à Alemanha. O país foi responsabilizado pela guerra e sofreu pesadas sanções econômicas e territoriais. Isso gerou um clima de ressentimento na Alemanha, que se tornou um terreno fértil para o surgimento de ideologias extremistas, como o nazismo, que, décadas depois, levariam à eclosão da Segunda Guerra Mundial.
+
+  Socialmente, a guerra teve um impacto profundo. Milhões de homens perderam suas vidas, e muitos mais retornaram mutilados ou traumatizados. A sociedade passou a repensar o valor da guerra, com movimentos pacifistas ganhando força, mas também surgindo novas tensões sociais, políticas e econômicas. O papel das mulheres, por exemplo, mudou significativamente, já que elas foram chamadas a substituir os homens que estavam na frente de batalha, especialmente nas fábricas e nos cuidados médicos. Esse novo papel das mulheres ajudaria a acelerar o movimento por direitos e igualdade, especialmente em relação ao direito ao voto.
+
+  Em termos econômicos, a guerra foi um grande drenador de recursos, levando as nações a uma dívida massiva. A reconstrução das economias afetadas pela guerra duraria anos, com muitos países, como a Alemanha, enfrentando períodos de hiperinflação e crise.
+
+  A Primeira Guerra Mundial também representou uma transformação tecnológica e cultural. O impacto das inovações científicas no campo militar e em áreas como medicina, além da criação de novas formas de propaganda, ajudou a moldar a sociedade moderna. Ao mesmo tempo, os horrores da guerra deixaram uma marca psicológica duradoura, como demonstrado pelos milhares de soldados que sofreram do que hoje chamamos de transtorno de estresse pós-traumático (TEPT).
+
+  Em resumo, a Primeira Guerra Mundial foi muito mais do que apenas um grande conflito militar. Ela foi uma guerra total que abalou as fundações políticas, sociais e econômicas do mundo, gerou uma nova ordem mundial e preparou o terreno para muitos dos conflitos e mudanças que definiriam o século 20. As lições e os legados desse período ainda ecoam nos dias de hoje, lembrando-nos do custo humano e das complexas dinâmicas geopolíticas que podem levar uma nação ao abismo da guerra.
+
+</p>
         </section>
 
         <section id="causas">
             <h2>Causas</h2>
             <p>A Primeira Guerra Mundial (1914-1918) foi um conflito global com múltiplas causas interligadas, sendo o assassinato do arquiduque Francisco Ferdinando o estopim, mas não a única razão. O imperialismo, o nacionalismo, a corrida armamentista e as alianças militares formadas na Europa também desempenharam papéis importantes.
 Causas:
-O assassinato do arquiduque Francisco Ferdinando:
-O herdeiro do trono austro-húngaro foi assassinado em Sarajevo, Bósnia, por um nacionalista sérvio, o que serviu de pretexto para a Áustria-Hungria declarar guerra à Sérvia.
-Imperialismo:
-A disputa por colônias e mercados entre as potências europeias gerou tensões e rivalidades.
-Nacionalismo:
-O forte sentimento nacionalista em vários países europeus, como a Alemanha, Sérvia e França, intensificou as rivalidades e a busca por afirmação.
-Corrida armamentista:
-O aumento dos gastos militares e a corrida por armamentos, conhecido como "paz armada", criou um clima de tensão e desconfiança entre as nações.
-Alianças militares:
-A formação de alianças como a Tríplice Aliança (Alemanha, Áustria-Hungria e Itália) e a Tríplice Entente (França, Reino Unido e Rússia) dividiu a Europa e ampliou o conflito.
-Outros fatores importantes:
-Revanchismo francês:
-A França buscava vingança pela derrota na Guerra Franco-Prussiana e a perda da Alsácia-Lorena.
-Darwinismo social:
-A aplicação da teoria da evolução de Darwin às relações entre nações e raças, justificando a luta pela sobrevivência e a dominação dos mais fortes, contribuiu para o clima de tensão.
-A crise nos Bálcãs:
-A região dos Bálcãs era palco de disputas entre o Império Austro-Húngaro e a Rússia, com o nacionalismo sérvio buscando a unificação de todos os sérvios em um único estado.
-Em resumo, a Primeira Guerra Mundial foi um conflito complexo, com raízes profundas na política, economia e ideologia da época. O assassinato de Francisco Ferdinando foi o estopim, mas a guerra foi resultado de anos de tensões e rivalidades entre as grandes potências europeias. .</p>
+. Nacionalismo
+O nacionalismo foi um dos principais motores do conflito. Muitos povos, especialmente na Europa Oriental, buscavam a independência ou a unificação sob uma única nação. O nacionalismo exacerbado nas grandes potências europeias também levou a tensões entre países, especialmente no que se refere à rivalidade entre as grandes nações.
+
+2. Imperialismo
+A busca por colônias e esferas de influência em várias partes do mundo gerou tensões entre as potências imperialistas. No final do século XIX e início do XX, os impérios europeus competiam ferozmente por território na África e na Ásia, o que aumentou o antagonismo entre eles.
+
+3. Militarismo
+As potências europeias investiram pesadamente em suas forças armadas e adotaram uma mentalidade belicista. O aumento da construção de exércitos e navios de guerra, juntamente com a popularização de ideologias militaristas, criou uma atmosfera de desconfiança e preparação para o conflito. A corrida armamentista, especialmente entre a Alemanha e a Grã-Bretanha, intensificou essas tensões.
+
+4. Alianças
+A formação de alianças militares também foi um fator crucial. Antes da guerra, as principais potências europeias haviam se agrupado em duas alianças militares:
+
+Tríplice Aliança: Alemanha, Áustria-Hungria e Itália.
+
+Tríplice Entente: França, Reino Unido e Rússia.
+Essas alianças criaram um sistema de segurança coletiva, onde um conflito entre dois países poderia rapidamente escalar para uma guerra em grande escala, como de fato aconteceu.
+
+5. Crise nos Balcãs
+A região dos Balcãs foi um ponto de tensão constante. O enfraquecimento do Império Otomano levou à crescente rivalidade entre os países da região, como a Sérvia, a Áustria-Hungria e o Império Russo, que tinham interesses conflitantes na área. A Primeira Guerra dos Balcãs (1912) e a Segunda Guerra dos Balcãs (1913) prepararam o terreno para o conflito maior.
+
+6. O assassinato do Arquiduque Francisco Ferdinando
+O evento que desencadeou diretamente a guerra foi o assassinato do Arquiduque Francisco Ferdinando, herdeiro do trono da Áustria-Hungria, em Sarajevo, na Bósnia, em 28 de junho de 1914. Ele foi morto por um nacionalista sérvio, o que provocou uma crise diplomática. A Áustria-Hungria, com o apoio da Alemanha, emitiu um ultimato à Sérvia, acusando-a de apoiar o assassinato. Quando a Sérvia não aceitou todas as condições, a Áustria-Hungria declarou guerra.
+
+7. Reações em Cadeia
+O sistema de alianças entrou em ação rapidamente. A Áustria-Hungria declarou guerra à Sérvia, e a Rússia, que tinha uma aliança com a Sérvia, mobilizou suas tropas. A Alemanha, aliada da Áustria-Hungria, declarou guerra à Rússia e, em seguida, à França, que estava aliada à Rússia. Quando a Alemanha invadiu a Bélgica para atacar a França, o Reino Unido declarou guerra à Alemanha.
+
+8. Conflitos Coloniais e Globais
+As rivalidades entre as potências europeias também se refletiam nas suas colônias. Embora o conflito tenha começado na Europa, a competição por territórios além-mar aumentou ainda mais as tensões entre as potências, e o conflito logo se espalhou para outras partes do mundo.
+
+Esses fatores juntos formaram uma "tempestade perfeita", onde o assassinato de Francisco Ferdinando foi apenas a faísca que acendeu um incêndio muito maior. O sistema de alianças e a crescente militarização fizeram com que um conflito inicialmente limitado rapidamente se transformasse em uma guerra mundial.
+
         </section>
+
+
 
         <section id="impactos">
             <h2>Impactos</h2>
-            <p>A Primeira Guerra Mundial (1914-1918) teve impactos profundos e duradouros, alterando a geopolítica, a economia e a sociedade em escala global. Dentre as principais consequências, destacam-se o colapso de impérios, o surgimento de novos países, a ascensão dos Estados Unidos e o impacto na economia e na sociedade.
-Consequências políticas e territoriais:
-Fim de impérios:
-Quatro grandes impérios foram desmantelados: Alemão, Austro-Húngaro, Russo e Otomano.
-Novos países:
-O colapso dos impérios levou ao surgimento de novas nações, como Polônia, Tchecoslováquia, Iugoslávia, Áustria, Hungria, Estônia, Letônia e Lituânia.
-Redesenho do mapa europeu:
-As fronteiras foram redesenhadas, alterando significativamente o mapa político da Europa.
-Surgimento de organizações internacionais:
-A Liga das Nações foi criada com o objetivo de promover a paz e a cooperação internacional, embora tenha se mostrado ineficaz em prevenir conflitos futuros.
-Ascensão dos Estados Unidos:
-A guerra consolidou a posição dos EUA como uma potência econômica e política global, com sua indústria e finanças fortalecidas.
-O conflito resultou na queda de impérios, como o Império Austro-Húngaro, e no surgimento de novos países. A guerra também levou a mudanças significativas nas tecnologias militares e na sociedade, com consequências profundas para as gerações seguintes.</p>
-        </section
+            A Primeira Guerra Mundial, que ocorreu entre 1914 e 1918, foi um dos conflitos mais devastadores da história da humanidade, não só pelas enormes perdas humanas e materiais, mas também pelos impactos profundos que teve nas esferas política, econômica, social e cultural. Esse conflito moldou o curso do século XX e ainda reverbera até hoje em muitos aspectos do mundo contemporâneo.
 
-            <div class="video">
-                <h3>O Início da Primeira Guerra Mundial</h3>
-                <iframe width="560" height="315" src=" Primeira Guerra Mundial começou com o assassinato do arquiduque Francisco Ferdinando, herdeiro do trono austro-húngaro, em Sarajevo, no dia 28 de junho de 1914. Esse evento, embora não tenha sido a única causa, serviu como estopim para um conflito que já estava sendo gestado por tensões políticas, econômicas e nacionalistas na Europa.
-O assassinato e as consequências imediatas:
-O arquiduque Francisco Ferdinando e sua esposa foram assassinados por um nacionalista sérvio chamado Gavrilo Princip.
-A Áustria-Hungria, com o apoio da Alemanha, culpou a Sérvia e apresentou um ultimato com exigências consideradas inaceitáveis.
-A Sérvia, com o apoio da Rússia, não aceitou todas as exigências, o que levou a Áustria-Hungria a declarar guerra à Sérvia em 28 de julho de 1914.
-A escalada do conflito:
-A Rússia, aliada da Sérvia, iniciou a mobilização de suas tropas, levando a Alemanha a declarar guerra à Rússia e, em seguida, à França.
-A Alemanha invadiu a Bélgica para atacar a França, o que fez com que a Grã-Bretanha entrasse na guerra contra a Alemanha.
+  Impactos Geopolíticos
+  A guerra alterou profundamente a configuração política e territorial da Europa e do mundo. Impérios se desintegraram, novos países surgiram e as fronteiras nacionais foram reconfiguradas. O Império Austro-Húngaro, que dominava grande parte da Europa Central e Oriental, entrou em colapso, dando origem a novos estados como Áustria, Hungria, Checoslováquia e Iugoslávia. O Império Otomano, por sua vez, perdeu vastos territórios no Oriente Médio, que foram divididos entre as potências vencedoras, especialmente o Reino Unido e a França, dando início ao processo de mandatos que levaria à formação de novos países como a Síria e o Iraque. A Alemanha, derrotada, viu seu império colonial desaparecer e suas fronteiras encolherem. A França e a Grã-Bretanha impuseram duras condições à Alemanha através do Tratado de Versalhes (1919), que estabeleceu uma reparação financeira extremamente pesada e levou à perda de territórios como a Alsácia-Lorena, que foi devolvida à França.
 
-" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  Além disso, a guerra resultou na ascensão dos Estados Unidos e do Japão como potências globais. Os EUA, que entraram no conflito em 1917, emergiram como a maior economia mundial, com uma influência crescente nas questões políticas internacionais. Já o Japão, aproveitando-se da fragilidade das potências europeias, expandiu sua influência na Ásia.
+
+  Impactos Econômicos
+  Os custos da Primeira Guerra Mundial foram colossais. O financiamento do conflito levou a enormes dívidas públicas, inflação e uma crise econômica generalizada, especialmente na Europa. Países como França, Alemanha e Rússia enfrentaram enormes dificuldades econômicas, e o custo humano da guerra fez com que muitas regiões ficassem em ruínas, com cidades destruídas, fábricas paralisadas e a agricultura devastada.
+
+  A Alemanha, derrotada, viu-se obrigada a pagar enormes reparações de guerra como parte do Tratado de Versalhes. Esse ônus financeiro, somado ao desemprego e à inflação, levou a uma crise econômica que culminaria na hiperinflação de 1923, quando o valor da moeda alemã (o marco) despencou drasticamente, causando um colapso social e político. Em muitos casos, as consequências econômicas da guerra foram um terreno fértil para o crescimento de regimes autoritários.
+
+  Impactos Sociais e Humanos
+  A Primeira Guerra Mundial resultou em cerca de 15 a 20 milhões de mortos, entre militares e civis, além de mais de 20 milhões de feridos. A guerra não apenas matou um grande número de pessoas, mas também deixou um legado de sofrimento psicológico, com muitos soldados voltando para casa com o que hoje é conhecido como Transtorno de Estresse Pós-Traumático (TEPT). O impacto da guerra sobre as famílias foi imenso, já que muitos homens ficaram incapazes de retornar ao trabalho devido a ferimentos ou trauma psicológico.
+
+  Do ponto de vista social, a Primeira Guerra Mundial teve um efeito profundo sobre os papéis de gênero. Com os homens mobilizados para o front, as mulheres assumiram uma série de funções anteriormente exclusivas dos homens, como trabalhar em fábricas, hospitais e no serviço público. Embora muitas mulheres retornassem ao lar após o fim da guerra, a experiência teve um impacto duradouro na sua emancipação. Em muitos países, o movimento pelo direito ao voto feminino ganhou força, com as mulheres conquistando esse direito em nações como os Estados Unidos (1920) e o Reino Unido (1918 para mulheres com mais de 30 anos).
+
+
+        </section id="Início"
+
             </div>
 
             <div class="video">
                 <h3>As Batalhas e as Consequências da Guerra</h3>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/K9Jv1b-uY7w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-
-            <div class="video">
-                <h3>A Vida na Trincheira</h3>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/lX0V5Tq7Fxk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-        </section>
-    </main>
-
-    <footer>
-
-    </footer>
-</body>
-</html>
+                <iframe width="560" height="315" src="https://youtu.be/x7-uVumzzRo?si=MqNF6UMwaDN8fqqe"
