--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
                 <li><a href="#introducao">Introdução</a></li>
                 <li><a href="#causas">Causas</a></li>
                 <li><a href="#impactos">Impactos</a></li>
-                <li><a href="#videos">Vídeos</a></li>
             </ul>
         </nav>
     </header>
@@ -112,4 +111,32 @@ Esses fatores juntos formaram uma "tempestade perfeita", onde o assassinato de F
 
             <div class="video">
                 <h3>As Batalhas e as Consequências da Guerra</h3>
-                <iframe width="560" height="315" src="https://youtu.be/x7-uVumzzRo?si=MqNF6UMwaDN8fqqe"
+                A Primeira Guerra Mundial, que ocorreu entre 1914 e 1918, foi um dos conflitos mais devastadores da história, com batalhas que marcaram o destino de nações e alteraram profundamente o curso da história. Além das grandes e sangrentas batalhas travadas, as consequências da guerra tiveram impactos duradouros, que moldaram o século 20 e, até mesmo, os dias de hoje.
+
+As Principais Batalhas
+
+O conflito foi caracterizado por uma série de batalhas que, devido à guerra de trincheiras, muitas vezes resultaram em baixas massivas, mas com poucos avanços territoriais. Entre as mais significativas, destaca-se a Batalha do Marne, travada em 1914, na qual as forças francesas e britânicas conseguiram impedir o avanço alemão rumo a Paris, estabelecendo as bases para o impasse da guerra no front ocidental. Esta batalha não apenas salvou a capital francesa, mas também iniciou o longo período de guerra de trincheiras, em que ambos os lados se enfrentaram de maneira estagnada e sangrenta.
+
+Em 1916, a Batalha de Verdun tornou-se um dos maiores símbolos de resistência, com os franceses repelindo os alemães após meses de combate intenso. A batalha foi marcada pelo sofrimento extremo dos soldados e pela enorme quantidade de baixas, com cerca de 700.000 mortos entre ambos os lados. No mesmo ano, a Batalha do Somme foi outro evento marcante, em que mais de 1 milhão de pessoas perderam a vida em uma tentativa de romper as linhas alemãs. Embora a batalha não tenha proporcionado uma vitória decisiva, ela demonstrou a brutalidade da guerra de trincheiras e as limitações das táticas empregadas.
+
+Outras batalhas como a Batalha de Passchendaele (1917) e a Batalha de Cambrai (1917), que introduziu o uso maciço de tanques, ilustraram as inovações tecnológicas da guerra, mas também evidenciaram o enorme custo humano. Já a Ofensiva da Primavera Alemã de 1918, embora inicialmente bem-sucedida, não foi capaz de evitar a entrada decisiva dos Estados Unidos no conflito, o que levou ao colapso final das forças centrais.
+
+As Consequências da Guerra
+
+O fim da guerra, após o armistício de 11 de novembro de 1918, resultou em um cenário geopolítico e social profundamente alterado. Em termos territoriais, a Primeira Guerra Mundial levou ao colapso de impérios centenários, como o Império Austro-Húngaro, o Império Otomano, o Império Russo e o Império Alemão, que se desintegraram e deram origem a novos países. O tratado de paz mais importante, o Tratado de Versalhes, impôs severas sanções à Alemanha, que foi considerada a principal responsável pelo conflito. O tratado causou um enorme ressentimento entre os alemães e foi um fator crucial para o surgimento do nazismo e a ascensão de Adolf Hitler.
+
+Além da reorganização territorial, a guerra também teve profundas consequências econômicas e sociais. O continente europeu, devastado pela guerra, enfrentou uma grave crise econômica, com inflação, desemprego e grandes dívidas públicas. A hiperinflação na Alemanha, por exemplo, foi uma das consequências mais visíveis da crise econômica. Esse ambiente de instabilidade contribuiu para o fortalecimento de movimentos radicais, como o comunismo na Rússia e o fascismo na Itália, além de gerar um clima de desilusão e desesperança em muitos países.
+
+Do ponto de vista social, a Primeira Guerra Mundial teve um impacto profundo nas estruturas familiares e nas normas de gênero. As mulheres, que assumiram papéis essenciais nas indústrias e nas forças de trabalho durante a guerra, conquistaram um maior grau de independência e, em alguns países, o direito ao voto. No entanto, o sofrimento humano causado pelo conflito também deixou marcas profundas, com milhões de soldados voltando para casa traumatizados e com as cicatrizes da guerra, o que mais tarde seria conhecido como transtorno de estresse pós-traumático (TEPT).
+
+A guerra também acelerou o desenvolvimento de novas tecnologias militares, como aviões, tanques, submarinos e armas químicas, que mudaram para sempre o modo de travar guerras. Embora essas inovações tivessem um impacto destrutivo, elas também moldaram o futuro das forças armadas e influenciaram o desenvolvimento tecnológico no século 20.
+
+Outro resultado significativo foi a ascensão dos Estados Unidos como potência mundial. Embora a participação americana tenha sido relativamente breve, ela foi decisiva para a vitória dos aliados. Após a guerra, os EUA se tornaram uma potência econômica e política global, com grande influência nas questões internacionais.
+
+Por fim, a Primeira Guerra Mundial preparou o terreno para o surgimento de um novo conflito mundial. O ressentimento em relação ao Tratado de Versalhes, aliado à crise econômica global e ao crescimento de ideologias extremistas, culminou no estopim da Segunda Guerra Mundial em 1939. O legado da Primeira Guerra Mundial, portanto, foi a criação de um mundo instável e propenso a novas catástrofes, que exigiria décadas para se recuperar totalmente.
+
+Conclusão
+
+A Primeira Guerra Mundial não foi apenas um confronto militar de grandes proporções, mas também um evento que transformou radicalmente o cenário político, social e econômico mundial. Com suas batalhas sangrentas e suas consequências profundas, a guerra deixou uma marca indelével na história do século 20, cujos efeitos perduraram por várias décadas. Além de remodelar fronteiras, causou transformações sociais e políticas e gerou um ciclo de instabilidade que culminou em outro grande conflito, a Segunda Guerra Mundial. A Primeira Guerra Mundial, portanto, é um marco decisivo na história moderna, cuja reflexão continua a ser relevante até os dias atuais.
+
+ <iframe width="560"height="315"src="https://www.youtube.com/watch?v=HNw027hhbbw" title="youtube video player"frameborder="0"allow= "accelerometer"
